# Lookout

./: .env.example  .gitignore  Look_Agent.ipynb  Lookout_Agent.ipynb  Lookout_Agent_Learning.ipynb  README.md  agent.py  app.py  drafting.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  settings.json  test_agent.py  tools.py  ui.py
agent/: __init__.py  chat_agent.py  chat_tools.py  cli.py  config.py  config_store.py  core.py  field_mapper.py  llm.py  tools.py
agent/campaign/: __init__.py  drafting.py
agent/db/: __init__.py  client.py
agent/ui/: __init__.py  cli.py
backend/: server.py
campaign/: __init__.py  drafting.py
db/: __init__.py  client.py
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatView.jsx  DispatchHistory.jsx  DispatchSummary.jsx  MatchedUsersTable.jsx  PromptInput.jsx  SendProgress.jsx  SetupView.jsx  Skeletons.jsx  TemplatePreview.jsx  TopBar.jsx
ui/: __init__.py
