[project]
name = "lookout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "notebook>=7.4.5",
    "orjson>=3.11.3",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "resend>=2.13.0",
    "rich>=14.1.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.35.0",
]
